kubernetes/services/base/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: hands-on-gw
spec:
    selector:
        istio: ingressgateway
    servers:
        -   port:
                number: 80
                name: http
                protocol: HTTP
            hosts:
                - "*"
