kubernetes/services/base/istio/product-composite-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: product-composite-vs
spec:
    hosts:
        - "*"
    gateways:
        - hands-on-gw
    http:
        -   match:
                -   uri:
                        prefix: /product-composite
            route:
                -   destination:
                        port:
                            number: 80
                        host: product-composite
